--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:screenOrientation="landscape"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,8 +18,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".GraActivity"
+            android:name=".GameActivity"
             android:label="@string/title_activity_gra"
+            android:screenOrientation="landscape"
             >
         </activity>
     </application>
