--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,10 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
-
     defaultConfig {
         applicationId "com.example.ola.inzynierka"
-        minSdkVersion 19
-        targetSdkVersion 23
+        minSdkVersion 16
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
     }
@@ -16,6 +15,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
